# minarrow

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: audit.yaml  features.yaml  release.yml
benches/: benchmark_parallel_simd.rs  consolidate.rs  hotloop_benchmark_avg_simd.rs  hotloop_benchmark_avg_std.rs  hotloop_benchmark_simd.rs  hotloop_benchmark_std.rs
examples/: arithmetic.rs  datetime_ops.rs  ndarray.rs  selection.rs  super_ndarray.rs  xarray.rs
examples/broadcasting/: test_broadcasting.rs  test_scalar_arithmetic.rs  test_string_broadcasting.rs  test_value_macros.rs  test_value_ops.rs
examples/ffi/: apache_arrow_ffi.rs  polars_ffi.rs
examples/print/: print_arrays.rs  print_table.rs
minarrow-py/: Cargo.toml  README.md  pyproject.toml
minarrow-py/docs/: api.md  index.md  interop.md
minarrow-py/examples/: pyliquid_ecosystem.rs  pyliquid_lifetime.rs  roundtrip_ml.rs  roundtrip_tensor.rs
minarrow-py/src/: array.rs  arrow_type.rs  chunked_array.rs  chunked_ndarray.rs  chunked_table.rs  convert.rs  dtype.rs  field.rs  lib.rs  ndarray.rs  pyliquid.rs  table.rs  xarray.rs
minarrow-py/tests/: test_ndarray.py
pyo3/: CHANGELOG.md  Cargo.toml  build.rs  pyproject.toml
pyo3/examples/: pycapsule_exchange.rs
pyo3/src/: error.rs  lib.rs  types.rs
pyo3/src/ffi/: dlpack.rs  mod.rs  to_py.rs  to_rust.rs
pyo3/tests/: atomic_tests.rs  python_roundtrip.rs
src/: aliases.rs  conversions.rs  lib.rs  macros.rs  utils.rs
src/enums/: array.rs  error.rs  operators.rs  scalar.rs  shape_dim.rs  time_units.rs
src/enums/collections/: numeric_array.rs  temporal_array.rs  text_array.rs
src/enums/value/: conversions.rs  impls.rs  mod.rs
src/ffi/: arrow_c_ffi.rs  arrow_dtype.rs  arrow_rs.rs  dlpack.rs  polars.rs  schema.rs
src/kernels/: bitwise.rs  datetime.rs  output_buffer.rs  string.rs
src/kernels/arithmetic/: dispatch.rs  mod.rs  simd.rs  std.rs  string.rs  string_ops.rs  types.rs
src/kernels/bitmask/: dispatch.rs  mod.rs  simd.rs  std.rs
src/kernels/broadcast/: array.rs  array_view.rs  cube.rs  field_array.rs  matrix.rs  mod.rs  ndarray.rs  scalar.rs  super_array.rs  super_array_view.rs  super_ndarray.rs  super_table.rs  super_table_view.rs  table.rs  table_view.rs  xarray.rs
src/kernels/routing/: arithmetic.rs  binary_map.rs  broadcast.rs  mod.rs
src/structs/: arena.rs  bitmask.rs  buffer.rs  column.rs  cube.rs  dictionary.rs  field.rs  field_array.rs  lbuffer.rs  matrix.rs  ndarray.rs  table.rs  xarray.rs
src/structs/chunked/: super_array.rs  super_ndarray.rs  super_table.rs
src/structs/shared_buffer/: memfd.rs  mod.rs
src/structs/shared_buffer/internal/: owned.rs  pvec.rs  vtable.rs
src/structs/variants/: boolean.rs  categorical.rs  float.rs  integer.rs  string.rs
src/structs/variants/datetime/: datetime_ops.rs  mod.rs  parse.rs  tz.rs
src/structs/views/: array_view.rs  bitmask_view.rs  ndarray_view.rs  table_view.rs
src/structs/views/chunked/: super_array_view.rs  super_ndarray_view.rs  super_table_view.rs
src/structs/views/collections/: boolean_array_view.rs  numeric_array_view.rs  temporal_array_view.rs  text_array_view.rs
src/traits/: byte_size.rs  combine.rs  concatenate.rs  consolidate.rs  custom_value.rs  datetime_ops.rs  masked_array.rs  print.rs  selection.rs  shape.rs  type_unions.rs  view.rs
tests/: apache_arrow.rs  arrow_c_integration.rs  categorical_dict_stress.rs  delete_range.rs  lbuffer_stress.rs  polars.rs  test_selection.rs
