cargo-features = ["trim-paths"]

[package]
name = "minarrow-py"
version = "0.1.0"
edition = "2024"
authors = ["Peter G. Bower"]
license = "Apache-2.0"
repository = "https://github.com/pbower/minarrow"
homepage = "https://github.com/pbower/minarrow"
readme = "README.md"
keywords = ["arrow", "columnar", "dataframe", "pyarrow", "analytics"]
description = "Minimal, straightforward and fast SIMD-compatible Apache Arrow inter-op for Python."

[workspace]

[lib]
name = "minarrow_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
minarrow = { version = "0.15", path = ".." }
minarrow-pyo3 = { version = "0.3", path = "../pyo3", optional = true, default-features = false }
pyo3 = { version = "0.23", features = ["abi3-py39"] }
thiserror = "2"

[features]
default = ["datetime", "large_string", "scalar_type", "value_type", "cube", "arrow_interop"]
extension-module = ["pyo3/extension-module"]
arrow_interop = ["dep:minarrow-pyo3", "minarrow-pyo3/datetime"]
simd = ["minarrow/simd"]

# Embeds a CPython interpreter so Rust can drive Python through `PyLiquid`.
# Links libpython - use the default non `extension-module` link mode and 
# it should not be combined with `extension-module`.
embed = ["arrow_interop", "scalar_type", "value_type", "simd"]
datetime = ["minarrow/datetime"]
extended_numeric_types = ["minarrow/extended_numeric_types", "minarrow-pyo3?/extended_numeric_types"]
large_string = ["minarrow/large_string"]
scalar_type = ["minarrow/scalar_type"]
value_type = ["minarrow/value_type"]
cube = ["minarrow/cube"]
default_categorical_8 = ["minarrow/default_categorical_8"]
# Mirrors the core crate, where `extended_categorical` implies `default_categorical_8`.
# `minarrow-pyo3` needs `extended_numeric_types` too, as its dictionary-index conversion
# gates the 8 and 16-bit key arms on both features.
extended_categorical = [
    "default_categorical_8",
    "extended_numeric_types",
    "minarrow/extended_categorical",
    "minarrow-pyo3?/extended_categorical",
]

[[example]]
name = "pyliquid_lifetime"
path = "examples/pyliquid_lifetime.rs"
required-features = ["embed"]

[[example]]
name = "pyliquid_ecosystem"
path = "examples/pyliquid_ecosystem.rs"
required-features = ["embed"]

[[example]]
name = "roundtrip_ml"
path = "examples/roundtrip_ml.rs"
required-features = ["embed"]

[build-dependencies]
pyo3-build-config = "0.23"

# Release profile is optimised, stripped, and carries no debug info.
#
# Panic stays at the default unwind so pyo3 converts Rust panics into Python exceptions
# rather than aborting the interpreter.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
overflow-checks = false
incremental = false
# Remap every embedded path - local crate, dependencies, and std - to a
# sanitised form, so no build-machine paths land in the binary.
trim-paths = "all"
