[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "minarrow"
version = "0.16.0"
description = "Minimal, straightforward and fast SIMD-compatible Apache Arrow inter-op for Python."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Peter Bower" }]
keywords = ["arrow", "columnar", "dataframe", "pyarrow", "analytics", "simd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://minarrow.com"
Documentation = "https://minarrow.com"
Repository = "https://github.com/pbower/minarrow"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyarrow>=14.0"]

[tool.maturin]
features = ["pyo3/extension-module", "extended_numeric_types", "extended_categorical"]
module-name = "minarrow"
